# MachineRacer

./: .gitignore  CMakeLists.txt
Maps/: TileSet.xcf  map.map  script.py
include/TwoDEngine/Components/: ComponentBase.hpp  InputComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp
include/TwoDEngine/Engine/: Engine.hpp  Player.hpp
include/TwoDEngine/Utils/: Vector2D.hpp
src/: CMakeLists.txt  main.cpp
src/Components/: CMakeLists.txt  SpriteComponent.cpp  TransformComponent.cpp
src/Engine/: CMakeLists.txt  Engine.cpp
src/Utils/: CMakeLists.txt  Vector2D.cpp
